actualización fin curso

--- a/3DSImporter.ipynb
+++ b/3DSImporter.ipynb
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e3379189-cf16-4d80-a864-0ce2049f76de",
+   "id": "749b7768-ad86-43f7-b589-0f3e20834ad3",
    "metadata": {},
    "outputs": [
     {
@@ -82,8 +82,16 @@
     "\n",
     "# actors = vtkActorCollection()\n",
     "actors = renderer.GetActors()\n",
-    "print('There are', actors.GetNumberOfItems(), 'actors.')\n",
-    "\n",
+    "print('There are', actors.GetNumberOfItems(), 'actors.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d2ec91e1-621e-4807-966c-25d06cfd3ac5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "renWin.SetWindowName('3DSImporter')\n",
     "renWin.Render()\n",
     "camera = vtkCamera()\n",
@@ -98,16 +106,8 @@
     "renderer.ResetCameraClippingRange()\n",
     "\n",
     "renWin.Render()\n",
-    "iren.Start()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "1f849056-97a5-41e0-8bb8-8994b7cc2687",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "iren.Start()\n",
+    "\n",
     "del importer, renWin, iren"
    ]
   },
