--- a/OBJImporter.ipynb
+++ b/OBJImporter.ipynb
@@ -84,7 +84,7 @@
     "actors = renderer.GetActors()\n",
     "print('There are', actors.GetNumberOfItems(), 'actors.')\n",
     "\n",
-    "renWin.SetWindowName('3DSImporter')\n",
+    "renWin.SetWindowName('OBJImporter')\n",
     "renWin.Render()\n",
     "camera = vtkCamera()\n",
     "camera.SetPosition(0, -1, 0)\n",
