--- a/ejercicioRevisado.ipynb
+++ b/ejercicioRevisado.ipynb
@@ -54,19 +54,86 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "36e64432-33d1-41ca-a5e3-110aa0fa401a",
+   "id": "e574a766-71ef-4a79-8a38-b42cf0e855bc",
    "metadata": {},
    "outputs": [],
    "source": [
     "coneActor = vtkActor()\n",
-    "\n",
+    "coneProp = coneActor.GetProperty()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1c14ca10-2415-4894-befc-392d13896df2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vtkOpenGLProperty (0000026FC8B6F9E0)\n",
+      "  Debug: Off\n",
+      "  Modified Time: 207\n",
+      "  Reference Count: 2\n",
+      "  Registered Events: (none)\n",
+      "  Ambient: 0.5\n",
+      "  Ambient Color: (1, 1, 1)\n",
+      "  Diffuse: 1\n",
+      "  Diffuse Color: (0, 1, 0)\n",
+      "  Edge Color: (0, 0, 0)\n",
+      "  Edge Visibility: Off\n",
+      "  Vertex Color: (0.5, 1, 0.5)\n",
+      "  Vertex Visibility: Off\n",
+      "  Interpolation: VTK_GOURAUD\n",
+      "  Opacity: 1\n",
+      "  Representation: VTK_SURFACE\n",
+      "  Specular: 0\n",
+      "  Specular Color: (1, 1, 1)\n",
+      "  Specular Power: 1\n",
+      "  Backface Culling: Off\n",
+      "  Frontface Culling: Off\n",
+      "  Point size: 1\n",
+      "  Line width: 1\n",
+      "  Line stipple pattern: 65535\n",
+      "  Line stipple repeat factor: 1\n",
+      "  Lighting: On\n",
+      "  RenderPointsAsSpheres: Off\n",
+      "  RenderLinesAsTubes: Off\n",
+      "  ShowTexturesOnBackface: On\n",
+      "  Shading: Off\n",
+      "  MaterialName: (none)\n",
+      "  Color: (1, 1, 1)\n",
+      "  EmissiveFactor: (1, 1, 1)\n",
+      "  NormalScale: 1\n",
+      "  OcclusionStrength: 1\n",
+      "  Metallic: 0\n",
+      "  Roughness: 0.5\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "coneProp.SetAmbient(0.5)\n",
+    "coneProp.SetDiffuseColor(0,1,0)\n",
+    "print(coneActor.GetProperty())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "001ef0c4-a559-4a77-bd02-7b6a3303df60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Asociamos mapper\n",
     "coneActor.SetMapper(coneMapper)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "235d5147-8114-40dc-a5fa-7c9478992587",
    "metadata": {},
    "outputs": [],
@@ -79,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "11015902-e187-4e01-bdc9-20c1480093aa",
    "metadata": {},
    "outputs": [],
@@ -90,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "97ed32da-ca64-4172-8a62-26832e9f89c9",
    "metadata": {},
    "outputs": [],
@@ -101,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "392a0fda-a75e-4572-9648-1e5ab2240924",
    "metadata": {},
    "outputs": [],
@@ -115,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "0dc816bc-1557-45e1-81db-e17ed59e909d",
    "metadata": {},
    "outputs": [
@@ -123,9 +190,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkOpenGLLight (000002042F0F3F30)\n",
+      "vtkOpenGLLight (0000026FC8C25BA0)\n",
       "  Debug: Off\n",
-      "  Modified Time: 313\n",
+      "  Modified Time: 319\n",
       "  Reference Count: 3\n",
       "  Registered Events: (none)\n",
       "  AttenuationValues: (1, 0, 0)\n",
@@ -157,47 +224,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "52f6b2e6-c394-48b8-9fbe-6a87e923679d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "vtkLightCollection (000002042F20D560)\n",
-      "  Debug: Off\n",
-      "  Modified Time: 311\n",
-      "  Reference Count: 2\n",
-      "  Registered Events: (none)\n",
-      "  Number Of Items: 1\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(lights)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "4ef946e2-381e-43ca-8bda-5bce1e238601",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Modificamos luz\n",
-    "luz_0.SetAmbientColor(1,1,1)\n",
+    "luz_0.SetAmbientColor(1,0,0)\n",
     "luz_0.SetDiffuseColor(1,1,1)\n",
     "luz_0.SetSpecularColor(0,0,0)\n",
-    "luz_0.SetConeAngle(2.0)\n",
+    "luz_0.SetConeAngle(20.0)\n",
     "luz_0.SetPositional(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "076f1b13-7c2c-4e12-8486-f183dc5be7bc",
    "metadata": {},
    "outputs": [],
@@ -213,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "45115ed8-2ac5-4f51-a515-6dd2421596c3",
    "metadata": {},
    "outputs": [],
@@ -225,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "f33c5843-ff31-4700-b2eb-3248bb6d4ce4",
    "metadata": {},
    "outputs": [],
