--- a/1.Color.ipynb
+++ b/1.Color.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8818c836",
+   "metadata": {},
+   "source": [
+    " [![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ULPGC-GTMA/ULPGC-PDA/blob/main/1.Color.ipynb)\n",
+    "\n",
+    " Si el *notebook* se ejecuta en Google Colab hay que recordar crear una carpeta *images* en dicho entorno y subir a la misma las imágenes con las que se vaya a experimentar. En la versión que se distribuye de este *notebook* hay que subir images/chinche_L.png.\n",
+    "\n",
+    " Si bien hay varias opciones para crear la carpeta y subir los ficheros, lo más sencillo y apropiado para la asignatura es buscar el icono de carpeta en el lado izquierdo de la ventana para abrir una vista de archivos. Entonces uede crearse la carpeta fácilmente en Colab. Para subir los archivos, previamente deben descargarse, a mano, desde GitHub al ordenador local y desde éste subirlo a la carpeta recién creada en Colab. Puede resultar necesario actualizar la vista."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "431fdd72",
+   "metadata": {},
+   "source": [
+    "# Sólo si se corre en Google Colab\n",
+    "\n",
+    "# !pip install colour-science"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "31ce4520-27d4-4642-816c-842bd7cb6886",
@@ -501,19 +523,11 @@
     "\n",
     "cplt.plot_single_sd(sd);"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6cfa5d07-e561-4498-9b50-1a6c013a469c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jra",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
